@@ -1,3 +1,4 @@
+	* improved peer exchange performance by sharing incoming connections which advertize listen port 
 	* deprecate set_ratio(), and per-peer rate limits
 	* add web seed support for torrents with pad files
 	* introduced a more scalable API for torrent status updates (post_torrent_updates()) and updated client_test to use it
